--- a/content/references.bib
+++ b/content/references.bib
@@ -1,10 +1,19 @@
-@article{semanticweb,
-  title = {The semantic web},
-  author = {Berners-Lee, Tim and Hendler, James and Lassila, Ora and others},
-  journal = {Scientific American},
-  volume = {284},
-  number = {5},
-  pages = {28--37},
-  year = {2001},
-  publisher = {New York, NY, USA:}
+@online{qlever,
+    title = {The QLever SPARQL Engine},
+    date = {2023},
+    organization = {Youtube},
+    author = {Hannah Bast},
+    url = {https://www.youtube.com/watch?v=4HqbAY1s0e0&t=3409s},
+}
+
+@article{verborgh2020semantic,
+  title={The Semantic Web identity crisis: in search of the trivialities that never were},
+  author={Verborgh, Ruben and Vander Sande, Miel},
+  journal={Semantic Web},
+  volume={11},
+  number={1},
+  pages={19--27},
+  year={2020},
+  publisher={IOS Press},
+  url={https://ruben.verborgh.org/articles/the-semantic-web-identity-crisis/}
 }
